fixing bug overflow

--- a/src/components/Story/Story.css
+++ b/src/components/Story/Story.css
@@ -28,6 +28,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  overflow: hidden;
 }
 
 .story-section .item-left {
